--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "mantenibilidad",
         "microservicios",
         "modularidad",
+        "opcion",
         "OWASP",
         "recursión",
         "Refactorizar",
